feat: Implement driver onboarding form, introduce `@repo/types` package, and refactor `@repo/ui` with new component structure and additions.

--- a/apps/drivers/package.json
+++ b/apps/drivers/package.json
@@ -11,10 +11,16 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@phosphor-icons/react": "^2.1.10",
+    "@repo/types": "*",
     "@repo/ui": "*",
     "next": "16.1.5",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
+    "react-phone-number-input": "^3.4.14",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
